--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </nav>
         </div>
         <div class="container">
-            <h1 class="font_2 ff mt_173">Sed tortor in quisque morbi <span class="d_block"> scelerisque etiam eu.
-                </span> </h1>
+            <h2 class="font_2 ff mt_173">Sed tortor in quisque morbi <span class="d_block"> scelerisque etiam eu.
+                </span> </h2>
             <p class="font_3 ff mt_20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc efficitur urna in
                 dictum <span class="d_block"> suscipit. Suspendisse maximus ipsum sem. Donec ut justo et leo congue
                     lacinia vitae nec
@@ -44,7 +44,7 @@
                 <a href="" class="font_start ff p_11 bg_clr">Get Started</a>
                 <a href="" class="font_learn ff ml_25">Learn more</a>
             </div>
-            <div class="row mt-80">
+            <div class="row mt-130">
                 <div class="col_12 col-md-9 ">
                     <div class="p-24 bg-blue cardBox">
                         <div
@@ -122,7 +122,6 @@
                 </div>
             </div>
         </div>
-        </div>
     </section>
     <section>
         <div class="container  ">
@@ -141,41 +140,41 @@
                         Suspendisse maximus ipsum sem. Donec ut justo et leo congue lacinia vitae nec arcu. Nunc elit
                         elit, malesuada id suscipit cursus,
                     </p>
-                    <div class="row justify_contnt_center">
-                        <div class="col_12 ">
-                            <div class="d_flex gap   ">
-                                <div class="border bg_clr1 txt_align  margin-top-35 ">
-                                    <img class="margin-t" src="./assets/image/png/circle(1).png" alt="#">
-                                    <h3 class="ff fw-500 fs-24 text-clr">Sharing</h3>
-                                    <p class="ff fw-400 fs-16 mb-15 text-clr-blue  pading-l-r-20">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                                        efficitur urna in
-                                    </p>
-                                </div>
-                                <div class="col_12 ">
-                                    <div class="border   txt_align  margin-top-35 ">
-                                        <img class="margin-t" src="./assets/image/png/circle2(1).png" alt="#">
-                                        <h3 class="ff fw-500 fs-24 text-clr1">Info</h3>
-                                        <p class="ff fw-400 fs-16 mb-15 text-clr-blue1     pading-l-r-20">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                                            efficitur urna in
-                                        </p>
-                                    </div>
-                                </div>
+                    <div class="row justify_contnt_center ">
+                        <div class="col_12 col_sm_6  ">
+                            <div class="border bg_clr1 txt_align margin-top-35 ">
+                                <img class="margin-t" src="./assets/image/png/circle(1).png" alt="#">
+                                <h3 class="ff fw-500 fs-24 text-clr">Sharing</h3>
+                                <p class="ff fw-400 fs-16 mb-15 text-clr-blue  pading-l-r-20">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                    efficitur urna in
+                                </p>
                             </div>
                         </div>
-                        <div class="border2    txt_align  margin-top-35 ">
-                            <img class="margin-t" src="./assets/image/png/circle3(2).png" alt="#">
-                            <h3 class="ff fw-500 fs-24 text-clr1">Help</h3>
-                            <p class="ff fw-400 fs-16 mb-15 text-clr-blue1   pading-l-r-20 ">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                                efficitur urna in
-                            </p>
+                        <div class="col_12 col_sm_6">
+                            <div class="border txt_align margin-top-35 ">
+                                <img class="margin-t" src="./assets/image/png/circle2(1).png" alt="#">
+                                <h3 class="ff fw-500 fs-24 text-clr1">Info</h3>
+                                <p class="ff fw-400 fs-16 mb-15 text-clr-blue1 pading-l-r-20">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                    efficitur urna in
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col_12 col_sm_6">
+                            <div class="border2 txt_align margin-top-35  ">
+                                <img class="margin-t" src="./assets/image/png/circle3(2).png" alt="#">
+                                <h3 class="ff fw-500 fs-24 text-clr1">Help</h3>
+                                <p class="ff fw-400 fs-16 mb-15 text-clr-blue1 pading-l-r-20 ">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                                    efficitur urna in
+                                </p>
+                            </div>
                         </div>
                     </div>
-
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <section class="bg-image mt_40 pb_50 ">
@@ -191,7 +190,7 @@
                     </span>
                 </p>
             </div>
-            <div class=" row d_flex flex-column align_itm_center   ">
+            <div class=" row d_flex flex-column align_itm_center justify_contnt_center   ">
                 <div class="col_6 col-sm-6  col-lg-3 col-md-4  txt_align mt-80   ">
                     <img src="./assets/image/png/group.png" alt="">
                     <h2 class="fw-700 fs_36 ff clr_white ">8800</h2>
@@ -413,7 +412,7 @@
 
                 </div>
             </div>
-            <p class="last-font pb_50">© Credits of companyName belong to companyName.</p>
+            <p class="last-font pb_50 mt20">© Credits of companyName belong to companyName.</p>
         </div>
     </footer>
 </body>
