--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <section class="bg_img pb1-100 ">
-        <div class="container nav_position ">
+    <section class="bg_img pb1-100">
+        <div class="container  ">
             <nav class="d_flex align_itm_center justfy_content_between pt_15 ">
                 <div class="d_flex align_itm_center z_index">
                     <img class="w-30" src="./assets/image/png/image1(2).png" alt="img">
@@ -94,17 +94,31 @@
                             <div class="w-100 w-sm-50 w-md-33 w-lg-25 mb-24 mb-lg-0 border-lg-right py-8">
                                 <div class="d_flex align_itm_center justify_contnt_center gap-10">
                                     <span>
-                                        <svg width="31" height="31" viewBox="0 0 31 31" fill="none"
+                                        <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
-                                                d="M15.5 16.792C17.6401 16.792 19.375 15.0571 19.375 12.917C19.375 10.7769 17.6401 9.04199 15.5 9.04199C13.3599 9.04199 11.625 10.7769 11.625 12.917C11.625 15.0571 13.3599 16.792 15.5 16.792Z"
+                                                d="M20.8991 24.69L20.0991 18.285C19.9857 17.3778 19.5448 16.5432 18.8593 15.9383C18.1738 15.3333 17.2909 14.9996 16.3766 15H13.6216C12.7078 15.0003 11.8254 15.3342 11.1405 15.9391C10.4555 16.544 10.0149 17.3782 9.9016 18.285L9.10035 24.69C9.05638 25.0419 9.08777 25.3991 9.19245 25.7379C9.29712 26.0768 9.47269 26.3894 9.70748 26.6552C9.94228 26.921 10.2309 27.1338 10.5543 27.2794C10.8776 27.4251 11.2282 27.5003 11.5828 27.5H18.4178C18.7724 27.5001 19.1229 27.4248 19.446 27.279C19.7692 27.1333 20.0577 26.9205 20.2924 26.6547C20.527 26.389 20.7025 26.0764 20.8071 25.7376C20.9117 25.3989 20.9431 25.0418 20.8991 24.69V24.69Z"
                                                 stroke="white" stroke-width="2" stroke-linecap="round"
                                                 stroke-linejoin="round" />
                                             <path
-                                                d="M15.5001 2.5835C12.7595 2.5835 10.1312 3.67218 8.19331 5.61006C6.25544 7.54794 5.16675 10.1763 5.16675 12.9168C5.16675 15.3607 5.686 16.9597 7.10425 18.7293L15.5001 28.4168L23.8959 18.7293C25.3142 16.9597 25.8334 15.3607 25.8334 12.9168C25.8334 10.1763 24.7447 7.54794 22.8068 5.61006C20.869 3.67218 18.2407 2.5835 15.5001 2.5835V2.5835Z"
+                                                d="M15 10C17.0711 10 18.75 8.32107 18.75 6.25C18.75 4.17893 17.0711 2.5 15 2.5C12.9289 2.5 11.25 4.17893 11.25 6.25C11.25 8.32107 12.9289 10 15 10Z"
+                                                stroke="white" stroke-width="2" />
+                                            <path
+                                                d="M5 13.75C6.38071 13.75 7.5 12.6307 7.5 11.25C7.5 9.86929 6.38071 8.75 5 8.75C3.61929 8.75 2.5 9.86929 2.5 11.25C2.5 12.6307 3.61929 13.75 5 13.75Z"
+                                                stroke="white" stroke-width="2" />
+                                            <path
+                                                d="M25 13.75C26.3807 13.75 27.5 12.6307 27.5 11.25C27.5 9.86929 26.3807 8.75 25 8.75C23.6193 8.75 22.5 9.86929 22.5 11.25C22.5 12.6307 23.6193 13.75 25 13.75Z"
+                                                stroke="white" stroke-width="2" />
+                                            <path
+                                                d="M5.00023 17.5H4.61773C4.02593 17.4999 3.4533 17.7098 3.0017 18.0923C2.5501 18.4747 2.24883 19.005 2.15148 19.5887L1.73523 22.0887C1.67549 22.4469 1.69451 22.8138 1.79094 23.1639C1.88738 23.514 2.05892 23.8389 2.29364 24.116C2.52836 24.393 2.82062 24.6156 3.1501 24.7683C3.47957 24.921 3.83835 25 4.20148 25H8.75023"
+                                                stroke="white" stroke-width="2" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path
+                                                d="M25 17.5H25.3825C25.9743 17.4999 26.5469 17.7098 26.9985 18.0923C27.4501 18.4747 27.7514 19.005 27.8487 19.5887L28.265 22.0887C28.3247 22.4469 28.3057 22.8138 28.2093 23.1639C28.1129 23.514 27.9413 23.8389 27.7066 24.116C27.4719 24.393 27.1796 24.6156 26.8501 24.7683C26.5207 24.921 26.1619 25 25.7987 25H21.25"
                                                 stroke="white" stroke-width="2" stroke-linecap="round"
                                                 stroke-linejoin="round" />
                                         </svg>
+
                                     </span>
                                     <div class="cardInfo">
                                         <p class="ff1 fw-500 fs-20 txt_clr">Capicity</p>
@@ -114,7 +128,7 @@
                             </div>
                             <div class="w-100 w-sm-50 w-md-33 w-lg-25">
                                 <div class="d_flex align_itm_center justify_contnt_center justify-content-lg-end">
-                                    <button class="cardBtn btnFill">GO CHECK</button>
+                                    <button class=" fw-700 fs-20 cardBtn btnFill">GO CHECK</button>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +139,7 @@
     </section>
     <section>
         <div class="container  ">
-            <div class="row">
+            <div class="row p_t50 pb_50">
                 <div class="col_12 col_md_12 col_lg_6  ">
                     <div>
                         <img class="pt_195" src="./assets/image/png/boy-pic.png" alt="img" style="width: 100%">
@@ -216,7 +230,7 @@
     </section>
     <section>
         <div class="container ">
-            <div class="row align_itm_center ">
+            <div class="row align_itm_center p_t50">
                 <div class="col_12 col_md_12 col_lg_6 text-alin">
                     <img src="./assets/image/png/Group74(1).png" alt="img">
                     <h2 class="font_explore ff mt-10">Explore our <span class="d_block"> latest events </span></h2>
