--- a/index.html
+++ b/index.html
@@ -208,22 +208,22 @@
                 <div class="col_6 col-sm-6  col-lg-3 col-md-4  txt_align mt-80   ">
                     <img src="./assets/image/png/group.png" alt="">
                     <h2 class="fw-700 fs_36 ff clr_white ">8800</h2>
-                    <p class="fw-400 fs_18 clr_white">PARTICIPANTS</p>
+                    <p class="fw-400 fs_18 ff  clr_white">PARTICIPANTS</p>
                 </div>
                 <div class="col_6 col-sm-6 col-lg-3 col-md-4  txt_align mt-80 ">
                     <img src="./assets/image/png/topic.png" alt="">
                     <h2 class="fw-700 fs_36 ff clr_white">300</h2>
-                    <p class="fw-400 fs_18 clr_white">TOPICS</p>
+                    <p class="fw-400 fs_18 ff clr_white">TOPICS</p>
                 </div>
                 <div class="col_6 col-sm-6 col-lg-3 col-md-4  txt_align mt-80 ">
                     <img src="./assets/image/png/headphones.png" alt="">
                     <h2 class="fw-700 fs_36 ff clr_white">50</h2>
-                    <p class="fw-400 fs_18 clr_white">SPEAKERS</p>
+                    <p class="fw-400 fs_18 ff clr_white">SPEAKERS</p>
                 </div>
                 <div class="col_6 col-sm-6  col-lg-3 col-md-4  txt_align mt-80 ">
                     <img src="./assets/image/png/award.png" alt="">
                     <h2 class="fw-700 fs_36 ff clr_white">30</h2>
-                    <p class="fw-400 fs_18 clr_white">AWARDS</p>
+                    <p class="fw-400 fs_18 ff clr_white">AWARDS</p>
                 </div>
             </div>
         </div>
@@ -414,9 +414,10 @@
                                 <li class="col_4">
                                     <a href=""><img src="./assets/image/png/Rectangle45.png" alt=""></a>
                                 </li>
-                                <li class="col_4">
+                                <li class="col_4 txt_align ">
                                     <div class="blue-box">
-                                        <p></p>
+                                        <p class="show-clr fw_700 fs-16 ff abslut pt-11">Show <span class="d_block">
+                                                More</span></p>
 
                                     </div>
                                 </li>
